# dannys-coding-ai-agent-final

./: .dockerignore  .env.example  .gitignore  01_PRD.md  02_WorkBreakdown.md  03_Specification.md  Dockerfile  PRD.md  README.md  SDD.md  docker-compose.yml  error_handling_best_practices.py  fibonacci.py  pyproject.toml  python_error_handling_comprehensive.md  python_error_handling_example.py  test_fibonacci.py  work-breakdown.md
query_sessions/20260409_135330/: fibonacci.py
query_sessions/20260409_140913/: PRD.md  SPECIFICATION.md  TASK_BREAKDOWN.md
query_sessions/20260409_140913/app/: __init__.py
query_sessions/20260409_140913/app/models/: __init__.py
query_sessions/20260409_140913/pms/: .gitignore  requirements.txt
query_sessions/20260409_140913/pms/app/: __init__.py  config.py  db.py  main.py
query_sessions/20260409_140913/pms/app/models/: __init__.py  user.py
query_sessions/20260409_140913/pms/app/routers/: auth.py  projects.py
query_sessions/20260409_140913/pms/app/schemas/: __init__.py  project.py  user.py
query_sessions/20260409_140913/pms/app/services/: auth_service.py  project_service.py
query_sessions/20260409_140913/pms/app/tests/: conftest.py  test_auth.py  test_project.py
query_sessions/20260409_140913/pms/app/utils/: security.py
query_sessions/20260409_142603/: fibonacci.py
query_sessions/20260409_143629/: fibonacci.py  fibonacci_review.md
query_sessions/20260409_145733/: fibonacci.py
query_sessions/20260409_151111/: fibonacci.py
query_sessions/20260409_152101/: fibonacci.py
query_sessions/20260409_153018/: PRD_PMS.md
query_sessions/20260409_154548/: PMS_PRD.md  database_schema.py
query_sessions/20260409_154548/pms/: app.py  config.py  extensions.py  models.py  requirements.txt
query_sessions/20260409_161557/: MOBILE_APP_SPECIFICATION.md  PMS_ARCHITECTURE.md  PR.md
query_sessions/20260409_161557/pms_backend/apis/: openapi.yaml
query_sessions/20260409_161557/pms_backend/business_logic/: specifications.py
query_sessions/20260409_161557/pms_backend/core/: __init__.py  auth.py  exceptions.py
query_sessions/20260409_161557/pms_backend/database/: models.py
query_sessions/20260409_161557/pms_backend/docs/: ARCHITECTURE.md
query_sessions/20260409_161557/pms_backend/models/: __init__.py  schemas.py
query_sessions/20260409_161557/specs/: 01_system_overview.md  02_component_architecture.md
query_sessions/20260409_163749/: TASK_BREAKDOWN.md
src/coding_agent/: __init__.py  __main__.py  agent.py  async_subagent_manager.py  async_subagent_server.py  config.py  langgraph_remote.py  resilience.py  runtime.py
src/coding_agent/memory/: __init__.py  categories.py  store.py
src/coding_agent/middleware/: __init__.py  async_task_completion.py  lazy_async_subagents.py  long_term_memory.py  model_fallback.py  subagent_lifecycle.py
src/coding_agent/state/: __init__.py  models.py  store.py
src/coding_agent/tools/: __init__.py
src/coding_agent/webui/: __init__.py  app.py
src/coding_agent/webui/_pages/: __init__.py  chat.py  memory.py  settings.py  subagents.py
src/coding_agent/webui/pages/: chat.py
tests/: test_async_subagent_manager.py  test_async_subagent_server.py  test_code_review_workflow.py  test_lazy_async_subagents.py  test_resilience.py  test_state_store.py
