[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-ai-agent"
version = "0.2.0"
description = "Coding AI Agent built on DeepAgents CLI with long-term memory, dynamic sub-agents, and model fallback"
requires-python = ">=3.11"
dependencies = [
    # DeepAgents SDK v0.5+ — create_deep_agent, async subagents, middleware stack
    "deepagents>=0.5.0",
    # LangGraph (explicit — ensures fallback works even if deepagents-cli install is partial)
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "langchain-core>=0.3.0",
    # LLM providers — OpenAI-compatible API + native OpenRouter support
    "langchain-openai>=1.1.0",
    "langchain-openrouter>=0.0.1",
    # Local fallback provider (Ollama) — required for model_fallback middleware
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    # Memory
    "chromadb>=0.5.0",
    # WebUI
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.2.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
coding-agent = "coding_agent.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]
